--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -6,7 +6,7 @@
  {{>homeHeader}}
         <main class="main">
             <div class="intro-slider-container mb-0">
-                <div class="intro-slider owl-carousel owl-theme owl-nav-inside owl-light" data-toggle="owl" data-owl-options='{"nav": false, "dots": false}'>
+                {{!-- <div class="intro-slider owl-carousel owl-theme owl-nav-inside owl-light" data-toggle="owl" data-owl-options='{"nav": false, "dots": false}'>
                     <div class="intro-slide" style="background-image: url(assets/images/demos/demo-5/slider/slide-1.jpg);">
                         <div class="container intro-content text-center">
                             <h3 class="intro-subtitle text-white">Don’t Miss</h3><!-- End .h3 intro-subtitle -->
@@ -26,7 +26,25 @@
                     </div><!-- End .intro-slide -->
                 </div><!-- End .intro-slider owl-carousel owl-theme -->
 
-                <span class="slider-loader text-white"></span><!-- End .slider-loader -->
+                <span class="slider-loader text-white"></span><!-- End .slider-loader --> --}}
+
+  <div class="intro-slider owl-carousel owl-theme owl-nav-inside owl-light" data-toggle="owl" data-owl-options='{"nav": true, "dots": true, "autoplay": true, "autoplayTimeout": 5000}'>
+
+    {{#each banners}}
+    <div class="intro-slide" style="background-image: url({{this.imageUrl}});">
+      <div class="container intro-content text-center">
+        <h3 class="intro-subtitle text-white">{{this.subtitle}}</h3>
+        <h1 class="intro-title text-white">{{this.title}}</h1>
+        <div class="intro-text text-white">{{this.description}}</div>
+        <a href="{{this.link}}" class="btn btn-primary">Discover NOW</a>
+      </div>
+    </div>
+    {{/each}}
+    
+  </div>
+  <span class="slider-loader text-white"></span>
+
+
             </div><!-- End .intro-slider-container -->
 
             <div class="brands-border owl-carousel owl-simple mb-5" data-toggle="owl" 
