--- a/views/partials/adminSidebar.hbs
+++ b/views/partials/adminSidebar.hbs
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    {{!-- <a href="/admin" class="nav-item nav-link  {{#if (eq activePage 'index')}}active{{/if}}"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a> --}}
+                    <a href="/admin" class="nav-item nav-link  {{#if (eq activePage 'index')}}active{{/if}}"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
 
                     <a href="/admin/product" class="nav-item nav-link  {{#if (eq activePage 'product')}}active{{/if}}"><i class="fa fa-th me-2"></i>products</a>
                     <a href="/admin/allUsers" class="nav-item nav-link   {{#if (eq activePage 'allUsers')}}active{{/if}}"><i class="fa fa-users me-2"></i>users</a>
@@ -34,9 +34,9 @@
                     <a href="/admin/returns" class="nav-item nav-link   {{#if (eq activePage 'returns')}}active{{/if}}"><i class="fa fa-undo me-2"></i>returns</a>
                     <a href="/admin/cancellations" class="nav-item nav-link {{#if (eq activePage 'cancellations')}}active{{/if}}"><i class="fa fa-times me-2"></i>cancellations</a>
                     <a href="/admin/banners" class="nav-item nav-link {{#if (eq activePage 'banners')}}active{{/if}}"><i class="fas fa-image me-2"></i>banners</a>
-                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
+                    {{!-- <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
                     <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
-                    <a href="#" class="nav-item nav-link"><i class="far fa-file-alt me-2"></i>Pages</a>
+                    <a href="#" class="nav-item nav-link"><i class="far fa-file-alt me-2"></i>Pages</a> --}}
                     
                 </div>
             </nav>
