--- a/views/admin/banners.hbs
+++ b/views/admin/banners.hbs
@@ -54,10 +54,10 @@
                 <td>{{this.displayOrder}}</td>
                 <td>
                   <div class="d-flex justify-content-start">
-                    <a class="btn btn-sm btn-primary" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#editBannerModal"
+                    {{!-- <a class="btn btn-sm btn-primary" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#editBannerModal"
                       data-banner='{{json this}}'>
                       <i class="fa fa-edit"></i>
-                    </a> 
+                    </a>  --}}
                     <a class="btn btn-sm btn-danger ms-2" href="/admin/deleteBanner?id={{this._id}}"><i class="fa fa-trash"></i></a>
                   </div>
                 </td>
@@ -94,10 +94,10 @@
                 <td>{{this.displayOrder}}</td>
                 <td>
                   <div class="d-flex justify-content-start">
-                    <a class="btn btn-sm btn-primary" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#editBannerModal"
+                    {{!-- <a class="btn btn-sm btn-primary" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#editBannerModal"
                       data-banner='{{json this}}'>
                       <i class="fa fa-edit"></i>
-                    </a> 
+                    </a>  --}}
                     <a class="btn btn-sm btn-danger ms-2" href="/admin/deleteBanner?id={{this._id}}"><i class="fa fa-trash"></i></a>
                   </div>
                 </td>
@@ -121,11 +121,9 @@
             <thead>
               <tr class="text-dark">
                 <th scope="col"><input class="form-check-input" type="checkbox"></th>
-                <th scope="col">Type</th>
+                <th scope="col">Image</th>
                 <th scope="col">Title</th>
                 <th scope="col">Subtitle</th>
-                <th scope="col">Description</th>
-                <th scope="col">Image</th>
                 <th scope="col">Link</th>
                 <th scope="col">Display Order</th>
                 <th scope="col">Action</th>
@@ -135,19 +133,17 @@
               {{#each midBanners}}
               <tr>
                 <td><input class="form-check-input" type="checkbox"></td>
-                <td>{{this.type}}</td>
+                <td><img src="{{this.image}}" alt="Banner Image" style="max-width: 100px; max-height: 60px;"></td>
                 <td>{{this.title}}</td>
                 <td>{{this.subtitle}}</td>
-                <td>{{this.description}}</td>
-                <td><img src="{{this.image}}" alt="Banner Image" style="max-width: 100px; max-height: 60px;"></td>
                 <td>{{this.link}}</td>
                 <td>{{this.displayOrder}}</td>
                 <td>
                   <div class="d-flex justify-content-start">
-                    <a class="btn btn-sm btn-primary" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#editBannerModal"
+                    {{!-- <a class="btn btn-sm btn-primary" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#editBannerModal"
                       data-banner='{{json this}}'>
                       <i class="fa fa-edit"></i>
-                    </a> 
+                    </a>  --}}
                     <a class="btn btn-sm btn-danger ms-2" href="/admin/deleteBanner?id={{this._id}}"><i class="fa fa-trash"></i></a>
                   </div>
                 </td>
@@ -288,7 +284,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form id="addMidBannerForm" action="/admin/addBanner" method="post" enctype="multipart/form-data">
+        <form id="addMidBannerForm" action="/admin/addMidBanner" method="post" enctype="multipart/form-data">
           <input type="hidden" name="type" value="mid">
           <div class="mb-3">
             <label for="midTitle" class="form-label">Title</label>
@@ -299,16 +295,12 @@
             <input type="text" class="form-control" id="midSubtitle" name="subtitle" required>
           </div>
           <div class="mb-3">
-            <label for="midDescription" class="form-label">Description</label>
-            <textarea class="form-control" id="midDescription" name="description" required></textarea>
-          </div>
-          <div class="mb-3">
             <label for="midImage" class="form-label">Image</label>
             <input type="file" class="form-control" id="midImage" name="image" accept="image/*" required>
           </div>
           <div class="mb-3">
             <label for="midLink" class="form-label">Link</label>
-            <input type="url" class="form-control" id="midLink" name="link" required>
+            <input type="text" class="form-control" id="midLink" name="link" required>
           </div>
           <div class="mb-3">
             <label for="midDisplayOrder" class="form-label">Display Order</label>
