--- a/views/admin/banners.hbs
+++ b/views/admin/banners.hbs
@@ -167,10 +167,8 @@
             <thead>
               <tr class="text-dark">
                 <th scope="col"><input class="form-check-input" type="checkbox"></th>
-                <th scope="col">Type</th>
                 <th scope="col">Title</th>
                 <th scope="col">Subtitle</th>
-                <th scope="col">Description</th>
                 <th scope="col">Image</th>
                 <th scope="col">Link</th>
                 <th scope="col">Display Order</th>
@@ -181,19 +179,17 @@
               {{#each bottomBanners}}
               <tr>
                 <td><input class="form-check-input" type="checkbox"></td>
-                <td>{{this.type}}</td>
                 <td>{{this.title}}</td>
                 <td>{{this.subtitle}}</td>
-                <td>{{this.description}}</td>
                 <td><img src="{{this.image}}" alt="Banner Image" style="max-width: 100px; max-height: 60px;"></td>
                 <td>{{this.link}}</td>
                 <td>{{this.displayOrder}}</td>
                 <td>
                   <div class="d-flex justify-content-start">
-                    <a class="btn btn-sm btn-primary" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#editBannerModal"
+                    {{!-- <a class="btn btn-sm btn-primary" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#editBannerModal"
                       data-banner='{{json this}}'>
                       <i class="fa fa-edit"></i>
-                    </a> 
+                    </a>  --}}
                     <a class="btn btn-sm btn-danger ms-2" href="/admin/deleteBanner?id={{this._id}}"><i class="fa fa-trash"></i></a>
                   </div>
                 </td>
@@ -322,7 +318,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form id="addBottomBannerForm" action="/admin/addBanner" method="post" enctype="multipart/form-data">
+        <form id="addBottomBannerForm" action="/admin/addBottomBanner" method="post" enctype="multipart/form-data">
           <input type="hidden" name="type" value="bottom">
           <div class="mb-3">
             <label for="bottomTitle" class="form-label">Title</label>
@@ -331,10 +327,6 @@
           <div class="mb-3">
             <label for="bottomSubtitle" class="form-label">Subtitle</label>
             <input type="text" class="form-control" id="bottomSubtitle" name="subtitle" required>
-          </div>
-          <div class="mb-3">
-            <label for="bottomDescription" class="form-label">Description</label>
-            <textarea class="form-control" id="bottomDescription" name="description" required></textarea>
           </div>
           <div class="mb-3">
             <label for="bottomImage" class="form-label">Image</label>
