added chat bot interface

--- a/views/layout/userLayout.hbs
+++ b/views/layout/userLayout.hbs
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="assets/css/plugins/magnific-popup/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/plugins/jquery.countdown.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
     <!-- Main CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
