--- a/views/partials/homeHeader.hbs
+++ b/views/partials/homeHeader.hbs
@@ -2,14 +2,14 @@
         <header class="header header-5">
             <div class="header-middle sticky-header">
                 <div class="container-fluid">
-                    <div class="header-left">
+                    {{!-- <div class="header-right">
                         <button class="mobile-menu-toggler">
                             <span class="sr-only">Toggle mobile menu</span>
                             <i class="icon-bars"></i>
                         </button>
 
                         <a href="#" class="logo">
-                            <img src="assets/images/demos/demo-5/logo.png" alt="" width="105" height="25">
+                            <img src="assets/images/demos/demo-5/sj1.png" alt="" width="105" height="25">
                         </a>
 
                         <nav class="main-nav">
@@ -39,7 +39,47 @@
                                 </li>
                             </ul><!-- End .menu -->
                         </nav><!-- End .main-nav -->
-                    </div><!-- End .header-left -->
+                    </div><!-- End .header-right --> --}}
+
+
+<div class="header-right d-flex align-items-center justify-content-between" style="width: 100%;">
+    <!-- Mobile menu toggler -->
+    <button class="mobile-menu-toggler" style="margin-right: auto;">
+        <span class="sr-only">Toggle mobile menu</span>
+        <i class="icon-bars"></i>
+    </button>
+
+    <!-- Navigation -->
+    <nav class="main-nav" style="flex-grow: 1;">
+        <ul class="menu sf-arrows d-flex align-items-center justify-content-center mb-0" style=" width: 100%;">
+            <li class="megamenu-container ">
+                <a href="#" >Home</a>
+            </li>
+            <li>
+                <a href="shop" >Shop</a> 
+            </li>
+
+            <!-- Logo in between -->
+            <li class="d-flex align-items-center" style="list-style: none;">
+                <a href="#" class="logo mr-1">
+                    <img src="assets/images/demos/demo-5/sj1.png" alt="Logo" width="105" height="25">
+                </a>
+            </li>
+
+            <!-- Right side navigation -->
+            <li>
+                <a href="myaccount" >Orders</a>
+            </li>
+            <li>
+                <a href="blog" >Blog</a>
+            </li>
+        </ul><!-- End .menu -->
+    </nav><!-- End .main-nav -->
+</div><!-- End .header-right -->
+
+
+
+
 
                     <div class="header-right">
                         <div class="header-search header-search-extended header-search-visible">
@@ -58,7 +98,10 @@
                         </a>
 
                         <div class="dropdown cart-dropdown">
-                            <a href="/cart" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
+                            <a href="/cart" class="dropdown-toggle" >
+                                <i class="icon-shopping-cart"></i>
+                            </a>                            
+                            {{!-- <a href="/cart" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
                                 <i class="icon-shopping-cart"></i>
                                 <span class="cart-count">2</span>
                             </a>
@@ -116,7 +159,8 @@
                                     <a href="/cart" class="btn btn-primary">View Cart</a>
                                     <a href="checkout.html" class="btn btn-outline-primary-2"><span>Checkout</span><i class="icon-long-arrow-right"></i></a>
                                 </div><!-- End .dropdown-cart-total -->
-                            </div><!-- End .dropdown-menu -->
+                            </div><!-- End .dropdown-menu --> --}}
+
                         </div><!-- End .cart-dropdown -->
                     </div><!-- End .header-right -->
                 </div><!-- End .container-fluid -->
