--- a/views/partials/homeHeader.hbs
+++ b/views/partials/homeHeader.hbs
@@ -82,7 +82,7 @@
 
 
                     <div class="header-right">
-                        <div class="header-search header-search-extended header-search-visible">
+                        {{!-- <div class="header-search header-search-extended header-search-visible">
                             <a href="#" class="search-toggle" role="button"><i class="icon-search"></i></a>
                             <form action="#" method="get">
                                 <div class="header-search-wrapper">
@@ -91,7 +91,7 @@
                                     <button class="btn btn-primary" type="submit"><i class="icon-search"></i></button>
                                 </div><!-- End .header-search-wrapper -->
                             </form>
-                        </div><!-- End .header-search -->
+                        </div><!-- End .header-search --> --}}
                         
                         <a href="/wishlist" class="wishlist-link">
                             <i class="icon-heart-o"></i>
