--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -1093,8 +1093,9 @@
                 </div><!-- End .container -->
             </div><!-- End .bg-lighter pt-5 pb-5 -->
 
+{{>chatBot}}
 
-<div style="position: fixed; bottom: 30px; right: 30px; z-index: 9999;">
+{{!-- <div style="position: fixed; bottom: 30px; right: 30px; z-index: 9999;">
   <div id="chat-tooltip" style="position: absolute; bottom: 50px; right: 0; background-color: #333; color: white; padding: 5px 10px; border-radius: 5px; display: none; white-space: nowrap;">
     Ask your doubts?
   </div>
@@ -1117,7 +1118,7 @@
       <button id="send-button" style="background-color: #000; color: white; border: none; padding: 8px 12px; border-radius: 3px; cursor: pointer;">Send</button>
     </div>
   </div>
-</div>            
+</div>             --}}
         </main><!-- End .main -->
 
 {{>allPageFooter}}
@@ -1160,8 +1161,7 @@
 
 {{!-- chat bot related script --}}
 
-<script src="/socket.io/socket.io.js"></script> <!-- Load Socket.IO -->
-
+{{!-- <script src="/socket.io/socket.io.js"></script> <!-- Load Socket.IO -->
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     const chatButton = document.getElementById('chat-button');
@@ -1218,7 +1218,7 @@
       document.getElementById("chat-messages").appendChild(botMessageElement);
     });
   });
-</script>
+</script> --}}
 
 
 
