--- a/views/partials/homeHeader.hbs
+++ b/views/partials/homeHeader.hbs
@@ -63,6 +63,7 @@
             <li class="d-flex align-items-center" style="list-style: none;">
                 <a href="#" class="logo mr-1">
                     <img src="assets/images/demos/demo-5/sj1.png" alt="Logo" width="105" height="25">
+                    {{!-- <span style="font-family: Arial, sans-serif; font-size: 24px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; color: #fff; text-shadow: 1px 1px 0 #ff3e3e, 2px 2px 0 #4a4af5, 3px 3px 0 #2ecc71;">SNEAKSHOTS</span>                     --}}
                 </a>
             </li>
 
