fixed some errors

--- a/views/partials/allPageHeader.hbs
+++ b/views/partials/allPageHeader.hbs
@@ -105,7 +105,7 @@
             </div><!-- End .header-middle -->
         </header><!-- End .header -->
         
-
+{{!-- script not working for clicking search button --}}
 <script>
     document.addEventListener("DOMContentLoaded", function () {
   const searchBtn = document.getElementById("search-btn");
@@ -121,7 +121,7 @@
     } else {
       alert("Please enter a search term!"); // Optional: Show an alert if input is empty
     }
-  });
+  });  
 });
 
 </script>
