fixed search related errors

--- a/views/partials/allPageHeader.hbs
+++ b/views/partials/allPageHeader.hbs
@@ -63,8 +63,8 @@
 
                     <div class="header-right">
                         <div class="header-search">
-                             <a href="#" id="search-btn" role="button" title="Search"><i class="icon-search"></i></a>
-                            <form action="/shop" method="get">
+                             <a href="#" class="search-toggle" id="search-btn" role="button" title="Search"><i class="icon-search"></i></a>
+                            <form action="/shop" method="get" id="search-form">
                                 <div class="header-search-wrapper" style="display: block !important;">
                                     <label for="search" class="sr-only">Search</label>
                                     <input type="search" class="form-control" name="search" id="search" placeholder="Search in..." required>
