--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -47,7 +47,7 @@
             <!-- Sales Chart Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="row g-4">
-                    <div class="col-sm-12 col-xl-6">
+                    {{!-- <div class="col-sm-12 col-xl-6">
                         <div class="bg-light text-center rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
                                 <h6 class="mb-0">Worldwide Sales</h6>
@@ -55,7 +55,7 @@
                             </div>
                             <canvas id="worldwide-sales"></canvas>
                         </div>
-                    </div>
+                    </div> --}}
                     <div class="col-sm-12 col-xl-6">
                         <div class="bg-light text-center rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
@@ -70,7 +70,7 @@
             <!-- Sales Chart End -->
 
 
-            <!-- Recent Sales Start -->
+            {{!-- <!-- Recent Sales Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="bg-light text-center rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
@@ -193,7 +193,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Recent Sales End -->
+            <!-- Recent Sales End --> --}}
 
   {{>adminFooter}}
 
