--- a/views/partials/homeHeader.hbs
+++ b/views/partials/homeHeader.hbs
@@ -2,45 +2,6 @@
         <header class="header header-5">
             <div class="header-middle sticky-header">
                 <div class="container-fluid">
-                    {{!-- <div class="header-right">
-                        <button class="mobile-menu-toggler">
-                            <span class="sr-only">Toggle mobile menu</span>
-                            <i class="icon-bars"></i>
-                        </button>
-
-                        <a href="#" class="logo">
-                            <img src="assets/images/demos/demo-5/sj1.png" alt="" width="105" height="25">
-                        </a>
-
-                        <nav class="main-nav">
-                            <ul class="menu sf-arrows">
-                                <li class="megamenu-container active">
-                                    <a href="#" class="sf-with-ul">Home</a>
-                                </li>
-                                <li>
-                                    <a href="shop" class="sf-with-ul">Shop</a> 
-                                </li>
-                                <li>
-                                    <a href="productView" class="sf-with-ul">Product</a>
-
-                                </li>
-                                <li>
-                                    <a href="myaccount" class="sf-with-ul">Myaccount</a>
-                                    <ul>
-                                        <li><a href="/logout">Logout</a></li>
-                                        <li><a href="404.html">Error 404</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="blog" class="sf-with-ul">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="about" class="sf-with-ul">About</a>
-                                </li>
-                            </ul><!-- End .menu -->
-                        </nav><!-- End .main-nav -->
-                    </div><!-- End .header-right --> --}}
-
 
 <div class="header-right d-flex align-items-center justify-content-between" style="width: 100%;">
     <!-- Mobile menu toggler -->
@@ -53,15 +14,15 @@
     <nav class="main-nav" style="flex-grow: 1;">
         <ul class="menu sf-arrows d-flex align-items-center justify-content-center mb-0" style=" width: 100%;">
             <li class="megamenu-container ">
-                <a href="#" >Home</a>
+                <a href="/" >Home</a>
             </li>
             <li>
-                <a href="shop" >Shop</a> 
+                <a href="/shop" >Shop</a> 
             </li>
 
             <!-- Logo in between -->
             <li class="d-flex align-items-center" style="list-style: none;">
-                <a href="#" class="logo mr-1">
+                <a href="/" class="logo mr-1">
                     <img src="assets/images/demos/demo-5/sj1.png" alt="Logo" width="105" height="25">
                     {{!-- <span style="font-family: Arial, sans-serif; font-size: 24px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; color: #fff; text-shadow: 1px 1px 0 #ff3e3e, 2px 2px 0 #4a4af5, 3px 3px 0 #2ecc71;">SNEAKSHOTS</span>                     --}}
                 </a>
@@ -69,10 +30,10 @@
 
             <!-- Right side navigation -->
             <li>
-                <a href="myaccount" >Orders</a>
+                <a href="/myaccount" >Orders</a>
             </li>
             <li>
-                <a href="blog" >Blog</a>
+                <a href="/myaccount" >Account</a>
             </li>
         </ul><!-- End .menu -->
     </nav><!-- End .main-nav -->
