--- a/views/layout/userLayout.hbs
+++ b/views/layout/userLayout.hbs
@@ -13,11 +13,11 @@
     <meta name="author" content="p-themes">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/sjicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons/sjicon.ico">
     <link rel="manifest" href="assets/images/icons/site.html">
     <link rel="mask-icon" href="assets/images/icons/safari-pinned-tab.svg" color="#666666">
-    <link rel="shortcut icon" href="assets/images/icons/favicon.ico">
+    <link rel="shortcut icon" href="assets/images/icons/sjicon.ico">
     <meta name="apple-mobile-web-app-title" content="atherton">
     <meta name="application-name" content="atherton">
     <meta name="msapplication-TileColor" content="#cc9966">
