--- a/views/user/productView.hbs
+++ b/views/user/productView.hbs
@@ -136,7 +136,7 @@
                             <li class="nav-item">
                                 <a class="nav-link active" id="product-desc-link" data-toggle="tab" href="#product-desc-tab" role="tab" aria-controls="product-desc-tab" aria-selected="true">Description</a>
                             </li>
-                            <li class="nav-item">
+                            {{!-- <li class="nav-item">
                                 <a class="nav-link" id="product-info-link" data-toggle="tab" href="#product-info-tab" role="tab" aria-controls="product-info-tab" aria-selected="false">Additional information</a>
                             </li>
                             <li class="nav-item">
@@ -144,7 +144,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="product-review-link" data-toggle="tab" href="#product-review-tab" role="tab" aria-controls="product-review-tab" aria-selected="false">Reviews (2)</a>
-                            </li>
+                            </li> --}}
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane fade show active" id="product-desc-tab" role="tabpanel" aria-labelledby="product-desc-link">
@@ -152,12 +152,12 @@
                                     <h3>Product Information</h3>
                                     <p> {{product.description}} </p>
                                     <ul>
-                                        <li>Nunc nec porttitor turpis. In eu risus enim. In vitae mollis elit. </li>
-                                        <li>Vivamus finibus vel mauris ut vehicula.</li>
-                                        <li>Nullam a magna porttitor, dictum risus nec, faucibus sapien.</li>
+                                        <li>Sporty lace-up with a mesh and synthetic upper Padded collar Shock-absorbing well-cushioned midsole . </li>
+                                        <li>Flexible traction outsole 1 1/2-inch heel Skechers logo detail.</li>
+                                        <li>Air-Cooled Memory Foam cushioned comfort insole Crafted with 100% vegan materials.</li>
                                     </ul>
 
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. </p>
+                                    <p>Keeping your feet well-protected is crucial when you are hitting the roads. That is why it can become essential to opt for ideal pairs of footwear. When you are shopping for shoes online, you can come across a wide variety of them present at your fingertips. With a few simple clicks and swipes, you can scroll through various sneakers that can offer proper padding to your feet. </p>
                                 </div><!-- End .product-desc-content -->
                             </div><!-- .End .tab-pane -->
                             <div class="tab-pane fade" id="product-info-tab" role="tabpanel" aria-labelledby="product-info-link">
@@ -355,13 +355,7 @@
                         <a href="/addToCart?q={{product._id}}" class="btn-product btn-cart"><span>add to cart</span></a>
                         {{/if}}
                         
-                        {{!-- <div>
-                        {{#if ../user}}
-                        <a href="#" class="btn-product-icon btn-wishlist btn-expandable" data-id="{{product._id}}"><span>add towishlist</span></a>
-                        {{else}}
-                        <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to wishlist</span></a>
-                        {{/if}}
-                        </div> --}}
+                    
                     </div><!-- End .product-details-action -->
                 </div><!-- End .col-6 -->
             </div><!-- End .row -->
